force-app/main/default/objects/User/fields/Avalaible__c.field-meta.xml
<CustomField>
    <fullName>Avalaible__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Avalaible</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>