force-app/main/default/objects/User/fields/Rate_p_Hora__c.field-meta.xml
<CustomField>
    <fullName>Rate_p_Hora__c</fullName>
    <label>Rate p/hora</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>