force-app/main/default/objects/User/fields/Rol__c.field-meta.xml
<CustomField>
    <fullName>Rol__c</fullName>
    <label>Rol</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Rol</valueSetName>
    </valueSet>
</CustomField>